2013-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* libtitania-x3d.cproj:
	* libtitania-x3d.md.pc:
	* IndexedFaceSet.h:
	* IndexedFaceSet.cpp: 

2013-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* IndexedFaceSet.h:
	* IndexedFaceSet.cpp: 

2013-02-12  Holger Seelig  <holger.seelig@yahoo.de>

	* Makefile.am:
	* libtitania-x3d.cproj:
	* Parser.h:
	* Parser.cpp:
	* X3DRenderer.cpp:
	* LightContainer.h:
	* LightContainer.cpp:
	* SpotLight.h:
	* PointLight.h:
	* SpotLight.cpp:
	* X3DLayerNode.h:
	* PointLight.cpp:
	* X3DLightNode.h:
	* X3DLightNode.cpp:
	* X3DLayerNode.cpp:
	* DirectionalLight.h:
	* NavigationInfo.h:
	* NavigationInfo.cpp:
	* DirectionalLight.cpp: 

2013-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* FlyViewer.cpp:
	* X3DBaseNode.cpp:
	* Viewpoint.cpp: 

2013-02-11  Holger Seelig  <holger.seelig@yahoo.de>

	* TimeSensor.h:
	* X3DBrowserContext.cpp:
	* TimeSensor.cpp:
	* X3DSensorNode.h:
	* IndexedFaceSet.h:
	* IndexedFaceSet.cpp:
	* RenderingProperties.h:
	* RenderingProperties.cpp:
	* ProximitySensor.h:
	* X3DTouchSensorNode.h:
	* X3DTouchSensorNode.cpp:
	* X3DPointingDeviceSensorNode.h: 

2013-02-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Router.h:
	* Router.cpp:
	* X3DBrowserContext.h:
	* TimeSensor.h:
	* X3DBrowserContext.cpp:
	* TimeSensor.cpp:
	* IndexedFaceSet.cpp:
	* RenderingProperties.cpp: 

2013-02-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Extrusion.h:
	* Extrusion.cpp: 

2013-02-10  Holger Seelig  <holger.seelig@yahoo.de>

	* X3DLayerNode.cpp: 

2013-02-10  Holger Seelig  <holger.seelig@yahoo.de>

	* Scene.h:
	* Scene.cpp:
	* X3DBaseNode.h:
	* X3DRenderer.h:
	* X3DRenderer.cpp:
	* LOD.h:
	* Switch.h:
	* LOD.cpp:
	* X3DBrowserContext.cpp:
	* Viewport.h:
	* Inline.h:
	* LayerSet.h:
	* Switch.cpp:
	* Transform.h:
	* Inline.cpp:
	* Viewport.cpp:
	* LayerSet.cpp:
	* Transform.cpp:
	* Billboard.h:
	* X3DLayerNode.h:
	* Billboard.cpp:
	* X3DLayerNode.cpp:
	* X3DGroupingNode.h:
	* X3DGroupingNode.cpp:
	* X3DViewpointNode.h: